# FixIntegrity

./: .gitignore  .gitmodules  CHANGELOG.md  HASH  README.md  build.gradle.kts  device_list.json  gradle.properties  settings.gradle.kts  update.json
.github/workflows/: android.yml  autopif.yml
device_prop/: akita_beta.prop  blazer_beta.prop  bluejay_beta.prop  caiman_beta.prop  cheetah_beta.prop  comet_beta.prop  felix_beta.prop  frankel_beta.prop  husky_beta.prop  komodo_beta.prop  lynx_beta.prop  mustang_beta.prop  oriole_beta.prop  panther_beta.prop  rango_beta.prop  raven_beta.prop  shiba_beta.prop  tangorpro_beta.prop  tegu_beta.prop  tokay_beta.prop
gradle/: libs.versions.toml
inject/: build.gradle.kts
inject/src/main/cpp/: CMakeLists.txt  inject.cpp
module/: .gitignore  action.sh  autopif.sh  autopif_ota.sh  common_func.sh  customize.sh  module.prop  pif.json  pif.prop  post-fs-data.sh  security_patch.sh  service.sh  uninstall.sh
module/webroot/: index.html  scripts.js  styles.css
webui/: index.html  package-lock.json  package.json  scripts.js  styles.css  theme.css  vite.config.js
webui/assets/: locales.js  scripts.js  styles.css
webui/public/locales/: CONTRIBUTOR.md  GUIDE.md  languages.json  template.xml
webui/public/locales/strings/: ar.xml  en.xml  id.xml  pl.xml  tr.xml  zh-CN.xml  zh-TW.xml
zygisk/: build.gradle.kts
zygisk/src/main/cpp/: CMakeLists.txt  pif_config.cpp  pif_config.hpp  zygisk.cpp
zygisk/src/main/java/es/chiteroman/playintegrityfix/: CustomPackageInfoCreator.java
